# TB-2-Speech

./: .gitignore  1_clean_data.py  2_train_scratch.py  3_train_finetune.py  4_evaluate.py  evaluation_results.csv  pyproject.toml  readme.md  requirements.txt
configs/: config_finetune.yaml  config_scratch.yaml
data/: transcript_clean.csv  transcripts.csv
scripts/: clean_data.py  evaluate.py  train_finetune.py  train_scratch.py
src/: __init__.py  dataset.py  model.py  preprocess.py  preprocessing.ipynb  trainer.py  transcripts.csv  utils.py  visualization.py
